add game struture

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <h1>Memory Game</h1>
-    <div id="board" class="board">
-      <!--Las cartas se generan desde JavaScript-->
-    </div>
+    <div class="game-board"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
