add button reset

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Memory Game</h1>
-    <div class="game-board"></div>
-
-    <script src="script.js"></script>
+    <button id="reset-btn">Reiniciar Juego</button>
+    <div class="board"></div>
+    <script src="./script.js"></script>
   </body>
 </html>
