--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>Memory Game</h1>
+    <h1>Juego de Memoria</h1>
     <button id="reset-btn">Reiniciar Juego</button>
     <div class="board"></div>
     <script src="./script.js"></script>
